# deltachat-cursed

./: .gitignore  CHANGELOG.md  CursedDelta.conf  README.md  pylama.ini  pyproject.toml  requirements-notify.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: python-ci.yml
arcanechat_tui/: __init__.py  application.py  chatlist.py  cli.py  composer.py  container.py  eventcenter.py  logger.py  main.py  util.py  welcome_widget.py
cursed_delta/: __init__.py  event.py
cursed_delta/ui/: __init__.py  chatlist_widget.py  containers.py  msgs_widget.py  msgsend_widget.py
deltachat_cursed/: __init__.py  __main__.py  cards_widget.py  cli.py  composer.py  conversation.py  lazylistwaker.py
docs/: light-theme.json  user-guide.md
requirements/: requirements-dev.txt  requirements.txt
src/cursed_delta/: __init__.py  event.py  oauth2.py
src/cursed_delta/ui/: __init__.py  chatlist_widget.py  containers.py  msgs_widget.py  msgsend_widget.py
src/deltachat_cursed/: __init__.py  account.py  application.py  event.py  events.py  main.py  notifications.py  oauth2.py  scli.py  util.py
src/deltachat_cursed/ui/: __init__.py  chatlist_widget.py  containers.py  msgs_widget.py  msgsend_widget.py  notifications.py  scli.py
src/deltachat_cursed/widgets/: chatlist.py  composer.py  conversation.py
